added a tableViewController for the daily questions. this controller has a popup confirmation when a question is selected from the table view.

--- a/TrainingLogMobile/TrainingLogMobile/Base.lproj/Main.storyboard
+++ b/TrainingLogMobile/TrainingLogMobile/Base.lproj/Main.storyboard
@@ -60,6 +60,107 @@
             </objects>
             <point key="canvasLocation" x="2370" y="1159"/>
         </scene>
+        <!--Question Table View Controller-->
+        <scene sceneID="dUD-C0-tso">
+            <objects>
+                <tableViewController id="FIB-Yi-Q5b" customClass="QuestionTableViewController" customModule="TrainingLogMobile" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" restorationIdentifier="tableView" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="90" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="m5a-qN-osC">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="603"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="cell" rowHeight="90" id="N5T-No-PwX" customClass="QuestionTableViewCell" customModule="TrainingLogMobile" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="28" width="375" height="90"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="N5T-No-PwX" id="7Uh-Ej-NdZ">
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="89.5"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="v6t-VN-HYk">
+                                            <rect key="frame" x="16" y="34" width="139" height="21"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                </tableViewCellContentView>
+                                <accessibility key="accessibilityConfiguration" identifier="QuestionTableViewCell"/>
+                                <connections>
+                                    <outlet property="questionTextLabel" destination="v6t-VN-HYk" id="wW4-q0-r9t"/>
+                                    <segue destination="CJM-Bz-Vff" kind="presentation" modalPresentationStyle="overCurrentContext" modalTransitionStyle="crossDissolve" id="1tm-wM-NlW"/>
+                                </connections>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="FIB-Yi-Q5b" id="aYr-iN-aWT"/>
+                            <outlet property="delegate" destination="FIB-Yi-Q5b" id="zhK-0R-es3"/>
+                        </connections>
+                    </tableView>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="uhL-eW-m0F" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1712.8" y="2077.5112443778112"/>
+        </scene>
+        <!--Pop Up View Controller-->
+        <scene sceneID="9oM-fi-pep">
+            <objects>
+                <viewController storyboardIdentifier="questionPopUpID" id="CJM-Bz-Vff" customClass="PopUpViewController" customModule="TrainingLogMobile" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="vHY-qj-rtM">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="1Py-FS-tfy">
+                                <rect key="frame" x="16" y="251" width="343" height="165"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HES-Jp-W6e">
+                                        <rect key="frame" x="74" y="8" width="196" height="21"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ves-cI-XEp">
+                                        <rect key="frame" x="82" y="67" width="30" height="30"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <color key="backgroundColor" red="0.44530174839999997" green="0.79607843140000001" blue="0.1762321167" alpha="1" colorSpace="calibratedRGB"/>
+                                        <state key="normal" title="No">
+                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="no:" destination="CJM-Bz-Vff" eventType="touchUpInside" id="zxJ-7t-xDc"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2Az-sg-PCN">
+                                        <rect key="frame" x="240" y="67" width="30" height="30"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <color key="backgroundColor" red="0.44530174839999997" green="0.79607843140000001" blue="0.1762321167" alpha="1" colorSpace="calibratedRGB"/>
+                                        <state key="normal" title="Yes">
+                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="yes:" destination="CJM-Bz-Vff" eventType="touchUpInside" id="gLt-YQ-BIR"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="343" id="UTo-fw-Crp"/>
+                                    <constraint firstAttribute="height" constant="165" id="g80-pa-xRM"/>
+                                </constraints>
+                            </view>
+                        </subviews>
+                        <constraints>
+                            <constraint firstItem="1Py-FS-tfy" firstAttribute="centerX" secondItem="vHY-qj-rtM" secondAttribute="centerX" id="C2z-0Y-NbS"/>
+                            <constraint firstItem="1Py-FS-tfy" firstAttribute="centerY" secondItem="vHY-qj-rtM" secondAttribute="centerY" id="CiU-pc-UG0"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="Thw-0E-EcY"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="FPq-On-8ql" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2615.1999999999998" y="2077.5112443778112"/>
+        </scene>
         <!--Navigation Controller-->
         <scene sceneID="L82-ea-bKD">
             <objects>
@@ -69,7 +170,7 @@
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <connections>
-                        <segue destination="9AG-vW-Tel" kind="relationship" relationship="rootViewController" id="rSR-nR-iUO"/>
+                        <segue destination="9AG-vW-Tel" kind="relationship" relationship="rootViewController" id="faT-PL-Irp"/>
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Tug-Oh-2pM" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -111,6 +212,14 @@
                                 <rect key="frame" x="65" y="472" width="245" height="77"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </tableView>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="m1f-qO-sW1">
+                                <rect key="frame" x="130" y="307" width="116" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Dashboard Table"/>
+                                <connections>
+                                    <segue destination="FIB-Yi-Q5b" kind="show" id="frn-ye-zQs"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
@@ -128,15 +237,15 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="BQB-oJ-Vzy" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="901.60000000000002" y="1190.5547226386807"/>
+            <point key="canvasLocation" x="902" y="1272"/>
         </scene>
-        <!--Questions View Controller-->
+        <!--Questions Table View Controller-->
         <scene sceneID="MeG-a4-oRn">
             <objects>
-                <pageViewController autoresizesArchivedViewToFullSize="NO" transitionStyle="scroll" navigationOrientation="horizontal" spineLocation="none" id="2nT-r5-ooC" customClass="QuestionsViewController" customModule="TrainingLogMobile" customModuleProvider="target" sceneMemberID="viewController"/>
+                <pageViewController autoresizesArchivedViewToFullSize="NO" transitionStyle="scroll" navigationOrientation="horizontal" spineLocation="none" id="2nT-r5-ooC" customClass="QuestionsTableViewController" customModule="TrainingLogMobile" customModuleProvider="target" sceneMemberID="viewController"/>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="tSf-Pp-TQi" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="902" y="1971"/>
+            <point key="canvasLocation" x="-1313" y="3109"/>
         </scene>
         <!--Question Controller-->
         <scene sceneID="eIr-Aj-d9b">
@@ -172,7 +281,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="yiR-it-TYR" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1712.8" y="1969.5652173913045"/>
+            <point key="canvasLocation" x="-502" y="3108"/>
         </scene>
         <!--Question Controller-->
         <scene sceneID="KAc-2I-E3q">
@@ -214,7 +323,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="D2V-Bt-deo" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2510" y="1971"/>
+            <point key="canvasLocation" x="295" y="3109"/>
         </scene>
         <!--Question Controller-->
         <scene sceneID="twL-z5-xaK">
@@ -256,7 +365,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ady-LW-FgK" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3271" y="1970"/>
+            <point key="canvasLocation" x="1055" y="3108"/>
         </scene>
         <!--Question Controller-->
         <scene sceneID="vfR-9A-dwQ">
@@ -281,7 +390,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="oAp-pv-gkn" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="4068" y="1970"/>
+            <point key="canvasLocation" x="1854" y="3107"/>
         </scene>
         <!--Registration View Controller-->
         <scene sceneID="H4o-ct-erZ">
